--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -1,1 +1,57 @@
 
+
+name: CI
+
+on:
+  push:
+  pull_request:
+    branches:
+      - master
+
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: windows-latest
+
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+
+      - name: Cache RGBDS
+        id: cache-rgbds
+        uses: actions/cache@v3
+        with:
+          path: rgbds/**
+          key: ${{ runner.os }}-rgbds
+
+      - name: Setup RGBDS
+        if: steps.cache-rgbds.outputs.cache-hit != 'true'
+        shell: pwsh
+        run: |
+          Invoke-WebRequest -Uri https://github.com/gbdev/rgbds/releases/download/v0.5.1/rgbds-0.5.1-win64.zip -OutFile rgbds-0.5.1-win64.zip
+          Expand-Archive -Path rgbds-0.5.1-win64.zip -DestinationPath rgbds/
+
+      - name: Test RGBDS
+        shell: cmd
+        run: |
+          PATH %PATH%;%CD%\rgbds
+          rgbasm -V
+
+      - name: Cache Python Pip
+        uses: actions/cache@v3
+        with:
+          path: ~\AppData\Local\pip\Cache
+          key: ${{ runner.os }}-pip-${{ hashFiles('python/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+            
+      - name: Python Pip Install
+        shell: cmd
+        run: |
+          pip install -r python/requirements.txt
+          pip freeze
+
+      - name: Python Tests
+        shell: cmd
+        run: make tests
