--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -13,6 +13,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11.3'
+
       - name: Cache RGBDS
         id: cache-rgbds
         uses: actions/cache@v3
