--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -32,8 +32,8 @@ jobs:
         if: steps.cache-rgbds.outputs.cache-hit != 'true'
         shell: pwsh
         run: |
-          Invoke-WebRequest -Uri https://github.com/gbdev/rgbds/releases/download/v$RGBDS_VERSION/rgbds-$RGBDS_VERSION-win64.zip -OutFile rgbds-$RGBDS_VERSION-win64.zip
-          Expand-Archive -Path rgbds-$RGBDS_VERSION-win64.zip -DestinationPath rgbds/
+          Invoke-WebRequest -Uri https://github.com/gbdev/rgbds/releases/download/v$env:RGBDS_VERSION/rgbds-$RGBDS_VERSION-win64.zip -OutFile rgbds-$env:RGBDS_VERSION-win64.zip
+          Expand-Archive -Path rgbds-$env:RGBDS_VERSION-win64.zip -DestinationPath rgbds/
 
       - name: Cache Python Pip
         id: cache-pip
