--- a/autopack/autopack.config
+++ b/autopack/autopack.config
@@ -1,13 +1,13 @@
-The autopacker (the in-studio graphics program and autopacker was affecitonately named Mr Yuk) packs the indicated files
+The autopacker (the in-studio graphics program and autopacker was affectionately named Mr Yuk) packs the indicated files
 
 First, the autopacker sorts all the files from largest to smallest in a list
 Then, for each bank, the autopacker places the largest file, earliest in the list, that will fit in the current bank
 Once the current bank is full (or there is no file that will fit at the end), the next bank is packed
 
-It seems like the file order for files of the same size were packed somewhat arbitrarily by Mr Yuk,
-but for the sake of consistency here the current autopacker uses the list order below for priority, with the earlier file having priority.
+The file order for files of the same size were packed somewhat arbitrarily by Mr Yuk's BankPacker, based on the input filenames' order.
+Here the current autopacker uses the list order below for priority, with the earlier file having priority.
 
-The entire /scenes/ folder is autopacked in banks $50-$80
+There is only 1 group of assets that are autopacked: the entire /scenes/ folder is autopacked in banks $50-$80
 
 [CONFIG]
 STARTBANK=$50
