--- a/python/projutils/tests/assets/autopack/1/autopack.config
+++ b/python/projutils/tests/assets/autopack/1/autopack.config
@@ -1,12 +1,10 @@
-Too small!
+Sort test!
 
 [CONFIG]
 STARTBANK=$50
-ENDBANK=$53
+ENDBANK=$80
 [FILELIST]
-FILE_001,python/projutils/tests/assets/autopack/size_4000.dat
-FILE_002,python/projutils/tests/assets/autopack/size_4000.dat
-FILE_003,python/projutils/tests/assets/autopack/size_4000.dat
-FILE_004,python/projutils/tests/assets/autopack/size_4000.dat
-FILE_005,python/projutils/tests/assets/autopack/size_4000.dat
-FILE_006,python/projutils/tests/assets/autopack/size_4000.dat
+FILE_001,python/projutils/tests/assets/autopack/size_1000.dat
+FILE_002,python/projutils/tests/assets/autopack/size_100.dat
+FILE_003,python/projutils/tests/assets/autopack/size_1000.dat
+FILE_004,python/projutils/tests/assets/autopack/size_1000.dat
