pip -> py -m pip

--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -22,7 +22,8 @@ jobs:
 
       - name: Install Dependancies
         run: |
-          pip install -r python/requirements.txt
+          py -0
+          py -m pip install -r python/requirements.txt
 
       - name: Cache RGBDS
         id: cache-rgbds
