Let's just use python instead of py - better for workflow (can use .venv locally and easily use the right version in Github actions)

--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -22,8 +22,7 @@ jobs:
 
       - name: Install Dependancies
         run: |
-          py -0
-          py -m pip install -r python/requirements.txt
+          pip install -r python/requirements.txt
 
       - name: Cache RGBDS
         id: cache-rgbds
