Fix all flake8 errors

--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -61,4 +61,4 @@ jobs:
       - name: Lint with flake8
         shell: pwsh
         run: |
-          flake8 python/magiparser python/make python/projutils
+          make flake
